added base styles

--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700|Roboto:400,700&display=swap" rel="stylesheet">
-        <!--<a style="background-color:black;color:white;text-decoration:none;padding:4px 6px;font-family:-apple-system, BlinkMacSystemFont, &quot;San Francisco&quot;, &quot;Helvetica Neue&quot;, Helvetica, Ubuntu, Roboto, Noto, &quot;Segoe UI&quot;, Arial, sans-serif;font-size:12px;font-weight:bold;line-height:1.2;display:inline-block;border-radius:3px" href="https://unsplash.com/@dustinlee?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Dustin Lee"><span style="display:inline-block;padding:2px 3px"><svg xmlns="http://www.w3.org/2000/svg" style="height:12px;width:auto;position:relative;vertical-align:middle;top:-2px;fill:white" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"></path></svg></span><span style="display:inline-block;padding:2px 3px">Dustin Lee</span></a>
-    -->
     </head>
 
-<!--testing!!!!-->
     <body>
         <div class="container" id="homepage">
             <header class="full-width">                
@@ -19,7 +16,7 @@
             </header>
             
             <section class ="full-width" id="work">                
-                <h3>Portfolio</h3>
+                <h3>My Portfolio</h3>
                 <div class="full-width">
                     <div class="half-width">
                         <a href="https://jhock9.github.io/rogue-pickings/" target="_blank">
@@ -58,7 +55,7 @@
             <section class= "full-width" id="about">
                 <h3>About Me</h3>
                 <div class="half-width">
-                    <p>Hi there! My name is Jon and I'm a Front End Web Developer and Designer based in Oklahoma City. I’m an Enneagram 1 who loves to create clean, functional websites that are as easy to navigate as they are beautiful to look at.</p>
+                    <p>I'm Jon, a Front End Web Developer and Designer based in Oklahoma City. I’m an Enneagram 1 who loves to create clean, functional websites that are as easy to navigate as they are beautiful to look at.</p>
                     <p>When I’m not coding I’m a mild-mannered account manager at Blusource helping our do-good partners support their under-resourced communities. In my free time (ha!) I chase around my 7 kids with my lovely and beautiful wife Amber.</p>
                 </div>
                 <div class="half-width">
@@ -84,7 +81,7 @@
             </section>
             
             <footer class= "full-width">              
-                <h6>Copyright 2019 | Jon Hocker</h6>
+                <h5>Copyright 2019 | Jon Hocker</h5>
             </footer>
         </div>
     </body>
