--- a/index.html
+++ b/index.html
@@ -52,35 +52,38 @@
                 </div>
             </section>
             
-            <section class= "full-width" id="about">
+            <section class="full-width" id="about">
                 <h3>About Me</h3>
-                <div class="half-width">
+                <div class="full-width">
+                    <div class="half-width">
                     <p>I'm Jon, a Front End Web Developer and Designer based in Oklahoma City. I’m an Enneagram 1 who loves to create clean, functional websites that are as easy to navigate as they are beautiful to look at.</p>
                     <p>When I’m not coding I’m a mild-mannered account manager at Blusource helping our do-good partners support their under-resourced communities. In my free time (ha!) I chase around my 7 kids with my lovely and beautiful wife Amber.</p>
-                </div>
-                <div class="half-width">
-                    <img src="img/jon-headshot1.jpg" alt="Jon Hocker Headshot" />
+                    </div>
+                    <div class="half-width">
+                        <img src="img/jon-headshot1.jpg" alt="Jon Hocker Headshot" />
+                    </div>
                 </div>
             </section>
 
-            <section id="contact">
+            <section class="full-width" id="contact">
+                <h3>Let's Connect</h3>
                 <div class ="full-width">
-                    <h3>Let's Connect</h3>
-                </div>
-                <div class="half-width">
-                    <h4>Hire Me</h4>
-                    <p>(405) 226-5532<br>
-                    <a href="mailto:jon.hocker@gmail.com">jon.hocker@gmail.com</a>
-                <div class="half-width">
-                    <h4>Follow Me</h4>
-                    <ul>
-                        <li><a href="https://www.linkedin.com/in/jonhocker/"><img src="img/linkedin.png" alt="linkedin icon" /></a></li>
-                        <li><a href="https://github.com/jhock9"><img src="img/github.png" alt="github icon" /></a></li>
-                    </ul>
+                    <div class="half-width">
+                        <h4>Hire Me</h4>
+                        <p>(405) 226-5532<br>
+                        <a href="mailto:jon.hocker@gmail.com">jon.hocker@gmail.com</a></p>
+                    </div>
+                    <div class="half-width">
+                        <h4>Follow Me</h4>
+                        <ul>
+                            <li><a href="https://www.linkedin.com/in/jonhocker/"><img src="img/linkedin.png" alt="linkedin icon" /></a></li>
+                            <li><a href="https://github.com/jhock9"><img src="img/github.png" alt="github icon" /></a></li>
+                        </ul>
+                    </div>    
                 </div>   
             </section>
             
-            <footer class= "full-width">              
+            <footer class="full-width">              
                 <h5>Copyright 2019 | Jon Hocker</h5>
             </footer>
         </div>
