added header id

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <body>
         <div class="container" id="homepage">
-            <header class="full-width">                
+            <header class="full-width" id="header">                
                 <h1>Hi, I'm Jon.</h1>
                 <h2>Let’s build something <span>great</span> together!</h2>
             </header>
