--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 
     <body>
         <div class="container" id="homepage">
-            <header class="full-width" id="header">                
+            <header class="full-width">                
                 <h1>Hi, I'm Jon.</h1>
-                <h2>Let’s build something <span>great</span> together!</h2>
+                <h2>I'm a web developer and designer <br>
+                    based in Oklahoma City.</h2>
             </header>
             
             <section class ="full-width" id="work">                
@@ -56,7 +57,8 @@
                 <h3>About Me</h3>
                 <div class="full-width">
                     <div class="half-width">
-                    <p>I'm Jon, a Front End Web Developer and Designer based in Oklahoma City. I’m an Enneagram 1 who loves to create clean, functional websites that are as easy to navigate as they are beautiful to look at.</p>
+                    <h4>Let’s build something <span>great</span> together!</h4>
+                    <p>I’m an Enneagram 1 who loves to create clean, functional websites that are as easy to navigate as they are beautiful to look at.</p>
                     <p>When I’m not coding I’m a mild-mannered account manager at Blusource helping our do-good partners support their under-resourced communities. In my free time (ha!) I chase around my 7 kids with my lovely and beautiful wife Amber.</p>
                     </div>
                     <div class="half-width">
