portfolio updates 95% done

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Jon Hocker | Web Developer</title>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
-        <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700|Roboto:400,700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700|Roboto:400,700|Shadows+Into+Light|Poiret+One|Yeseva+One&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -21,7 +21,7 @@
                 <div class="full-width" id="rogue">
                     <div class="half-width">
                         <a href="https://jhock9.github.io/rogue-pickings/" target="_blank">
-                            <img src="img/rogue-thumbnail.png" id ="rogue-img" alt="Rogue Pickings website" /></a>
+                            <img src="img/rogue-pickings.png" id ="rogue-img" alt="Rogue Pickings website" /></a>
                     </div>
                     <div class="half-width">
                         <h4>Rouge Pickings Website</h4>
@@ -33,7 +33,7 @@
                 <div class="full-width" id="jubilee">
                     <div class="half-width">
                         <a href="https://jhock9.github.io/jubilee-austen/" target="_blank">
-                            <img src="img/jubilee-thumbnail.png" id="jubilee-img" alt="Jubilee Austen website" /></a>
+                            <img src="img/jubilee-austen.png" id="jubilee-img" alt="Jubilee Austen website" /></a>
                     </div>
                     <div class="half-width">
                         <h4>Jubilee Austen Website</h4>
@@ -45,12 +45,12 @@
                 <div class="full-width" id="holstee"> 
                     <div class="half-width">
                         <a href="https://jhock9.github.io/holstee-manifesto/" target="_blank">
-                            <img src="img/holstee-thumbnail.png" id="holstee-img" alt="Holstee Manifesto Project" /></a>
+                            <img src="img/holstee-manifesto.png" id="holstee-img" alt="Holstee Manifesto Project" /></a>
                     </div>
                     <div class="half-width">
-                        <h4>Holstee Manifesto</h4>
+                        <h4>Holstee Manifesto Exercise</h4>
                         <h5>HTML5 | CSS</h5>
-                        <p>My first coding exercise (Huzzah!) exploring the use of common HTML & CSS properties to create my own <a href="https://www.holstee.com/pages/manifesto" target="_blank" id="holstee-link">Holstee Manifesto</a> design.</p>
+                        <p>My first coding exercise (Huzzah!) exploring the use of common HTML & CSS properties like floats and the box model to create my own <a href="https://www.holstee.com/pages/manifesto" target="_blank" id="holstee-link">Holstee Manifesto</a> design.</p>
                     </div>
                 </div>
             </section>
@@ -59,12 +59,12 @@
                 <h3>About Me</h3>
                 <div class="full-width">
                     <div class="half-width">
-                        <img src="img/jon-headshot.jpg" id="headshot" alt="Jon Hocker Headshot" />
+                        <img src="img/jon-headshot1.jpg" id="headshot" alt="Jon Hocker Headshot" />
                     </div>
                     <div class="half-width">
                         <h4>Let’s build something <span>great</span> together!</h4>
                         <p>I’m an Enneagram 1 who loves to create clean, functional websites that are as easy to navigate as they are beautiful to look at.</p>
-                        <p>When I’m not coding I’m a mild-mannered account manager at <a href="http://www.blusource.com/" target="_blank" id="blusource-link">Blusource</a> helping our do-good partners support their under-resourced communities. In my free time (ha!) I chase around my 7 kids with my lovely and beautiful wife Amber.</p>
+                        <p>When I’m not coding I serve as the director of human resources at <a href="http://www.blusource.com/" target="_blank" id="blusource-link">Blusource</a> helping our do-good partners support their under-resourced communities. In my free time (ha!) I chase around my 7 kids with my lovely and beautiful wife Amber.</p>
                     </div>
                 </div>
             </section>
