--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Jon Hocker | Web Developer</title>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
-        <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700|Roboto:400,700|Shadows+Into+Light|Poiret+One|Yeseva+One&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Raleway|Sanchez|Poiret+One|Shadows+Into+Light|Patua+One|Yeseva+One&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -50,7 +50,7 @@
                     <div class="half-width">
                         <h4>Holstee Manifesto Exercise</h4>
                         <h5>HTML5 | CSS</h5>
-                        <p>My first coding exercise (Huzzah!) exploring the use of common HTML & CSS properties like floats and the box model to create my own <a href="https://www.holstee.com/pages/manifesto" target="_blank" id="holstee-link">Holstee Manifesto</a> design.</p>
+                        <p>My first coding exercise exploring the use of common HTML & CSS properties like floats and the box model to create my own <a href="https://www.holstee.com/pages/manifesto" target="_blank" id="holstee-link">Holstee Manifesto</a> design.</p>
                     </div>
                 </div>
             </section>
@@ -64,7 +64,7 @@
                     <div class="half-width">
                         <h4>Let’s build something <span>great</span> together!</h4>
                         <p>I’m an Enneagram 1 who loves to create clean, functional websites that are as easy to navigate as they are beautiful to look at.</p>
-                        <p>When I’m not coding I serve as the director of human resources at <a href="http://www.blusource.com/" target="_blank" id="blusource-link">Blusource</a> helping our do-good partners support their under-resourced communities. In my free time (ha!) I chase around my 7 kids with my lovely and beautiful wife Amber.</p>
+                        <p>When I’m not coding I serve as the director of human resources at <a href="http://www.blusource.com/" target="_blank" id="blusource-link">Blusource</a> helping our do-good partners support their under-resourced communities. In my free time I chase around my 7 kids with my lovely and beautiful wife Amber.</p>
                     </div>
                 </div>
             </section>
@@ -81,8 +81,8 @@
                     <div class="third-width" id=social-media-icons>
                         <h4>Follow Me</h4>
                         <ul>
-                            <li><a href="https://www.linkedin.com/in/jonhocker/"><img src="img/linkedin.png" alt="linkedin icon" /></a></li>
-                            <li><a href="https://github.com/jhock9"><img src="img/github.png" alt="github icon" /></a></li>
+                            <li><a href="https://www.linkedin.com/in/jonhocker/"><img src="img/linkedin.png" alt="linkedin icon" id=linkedin /></a></li>
+                            <li><a href="https://github.com/jhock9"><img src="img/github.png" alt="github icon" id=github /></a></li>
                         </ul>
                     </div>    
                   
