--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                 <div class="third-width" id=social-media-icons>
                     <h4>Follow Me</h4>
                     <ul>
-                        <li><a href="https://www.linkedin.com/in/jonhocker/"><img src="img/linkedin.png" alt="linkedin icon" id=linkedin /></a></li>
-                        <li><a href="https://github.com/jhock9"><img src="img/github.png" alt="github icon" id=github /></a></li>
+                        <li><a href="https://www.linkedin.com/in/jonhocker/" target="_blank"><img src="img/linkedin.png" alt="linkedin icon" id=linkedin /></a></li>
+                        <li><a href="https://github.com/jhock9" target="_blank"><img src="img/github.png" alt="github icon" id=github /></a></li>
                     </ul>
                 </div>    
                 
