--- a/index.html
+++ b/index.html
@@ -5,16 +5,15 @@
         <title>Jon Hocker | Web Developer</title>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
-        <link href="https://fonts.googleapis.com/css?family=Raleway|Sanchez|Poiret+One|Shadows+Into+Light|Patua+One|Yeseva+One&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Raleway|Sanchez|Poiret+One|Shadows+Into+Light|Patua+One|Megrim&display=swap" rel="stylesheet">
     </head>
 
 <!-- add a nav bar -->
     <body id="homepage">
         <header>
             <div class="full-width">                
-                <h1>Hi, I'm Jon.</h1>
-                <h2>I'm a web developer and designer <br>
-                    based in Oklahoma City.</h2>
+                <h1>Jon Hocker</h1>
+                <h2>web developer and designer</h2>
             </div>
         </header>
         
