--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
         <title>Jon Hocker | Web Developer</title>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
-        <link href="https://fonts.googleapis.com/css?family=Raleway|Sanchez|Poiret+One|Shadows+Into+Light|Patua+One|Megrim&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Sanchez|Poiret+One|Raleway|Shadows+Into+Light&display=swap" rel="stylesheet">
     </head>
 
-<!-- add a nav bar -->
+<!-- add a sticky nav -->
+
     <body id="homepage">
         <header>
             <div class="full-width">                
