finished mobile styles

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+c<!doctype html>
 <html class="no-js" lang="">
 
 <head>
@@ -39,7 +39,7 @@
     <div class="content-wrapper">                
 
       <h1>Jon Hocker</h1>
-      <h2>web developer and designer</h2>
+      <p>web developer and designer</p>
       <nav>   
         <ul>
           <li></li>
