--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@ c<!doctype html>
         <div class=social>
           <h3>Follow Me</h3>
           <div class="social-icons">
-            <p><a href="https://www.linkedin.com/in/jonhocker/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-            <p><a href="https://github.com/jhock9" target="_blank"><i class="fab fa-github-square"></i></a></li>
+            <p><a href="https://www.linkedin.com/in/jonhocker/" target="_blank"><i class="fab fa-linkedin"></i></a></p>
+            <p><a href="https://github.com/jhock9" target="_blank"><i class="fab fa-github-square"></i></a></p>
           </div>
         </div>    
         
