added javascript projects

--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@ c<!doctype html>
   <meta name="theme-color" content="#fafafa">
 </head>
 
-      <!-- THINGS TO UPDATE
+      <!--TODO -- THINGS TO UPDATE
             - add a logo and nav (like unplugged)
             - make nav sticky
             - add hero area? 
+            - add JS
         -->
 
 <body>
@@ -54,7 +55,67 @@ c<!doctype html>
         <h2>Projects</h2>
         <article> 
           <figure class="project-image">
-            <a href="https://jhock9.github.io/unplugged/" target="_blank">
+            <a href="https://jhock9.github.io/github-repo-gallery/" target="_blank">
+              <img src="img/github-repo-gallery.png" alt="GitHub Repo Gallery" /></a>
+          </figure>
+          <div class="project-description">
+            <h3>Interactive Gallery Search Page</h3>
+            <h4>JavaScript | APIs</h4>
+            <p>JavaScript project to create an interactive gallery for my GitHub repos. HTML/CSS provided, I coded the JS and worked with APIs to bring this page to life.</p>
+          </div>
+        </article>
+
+        <article> 
+          <figure class="project-image">
+            <a href="https://jhock9.github.io/magic-8-ball/" target="_blank">
+              <img src="img/magic-8-ball.png" alt="Magic 8-Ball" /></a>
+          </figure>
+          <div class="project-description">
+            <h3>Interactive Magic 8-Ball</h3>
+            <h4>JavaScript | jQuery</h4>
+            <p>JavaScript project to create a virtual Magic 8-Ball. HTML/CSS provided, I coded the JS and jQuery.</p>
+          </div>
+        </article>
+
+        <article> 
+          <figure class="project-image">
+            <a href="https://jhock9.github.io/guess-the-word/" target="_blank">
+              <img src="img/guess-the-word.png" alt="Guess the Word" /></a>
+          </figure>
+          <div class="project-description">
+            <h3>Interactive Guessing Game</h3>
+            <h4>JavaScript</h4>
+            <p>JavaScript project to create an interactive hangman-style guessing game. HTML/CSS provided, I coded the JS.</p>
+          </div>
+        </article>
+
+        <article> 
+          <figure class="project-image">
+            <a href="https://jhock9.github.io/election-map/" target="_blank">
+              <img src="img/election-map.png" alt="Election Map" /></a>
+          </figure>
+          <div class="project-description">
+            <h3>Interactive Election Map</h3>
+            <h4>JavaScript</h4>
+            <p>JavaScript project to create a fictional election map. HTML/CSS provided, I coded the JS.</p>
+          </div>
+        </article>
+
+        <article> 
+          <figure class="project-image">
+            <a href="https://jhock9.github.io/lolcat-clock/" target="_blank">
+              <img src="img/lolcat-clock.png" alt="LOL Cat Clock" /></a>
+          </figure>
+          <div class="project-description">
+            <h3>Interactive Web Clock</h3>
+            <h4>JavaScript</h4>
+            <p>JavaScript project to create an interactive clock. HTML/CSS provided, I coded the JS.</p>
+          </div>
+        </article>
+
+        <article> 
+          <figure class="project-image">
+            <a href="https://jhock9.github.io/unplugged-retreat/" target="_blank">
               <img src="img/unplugged.png" alt="Unplugged Retreat Project" /></a>
           </figure>
           <div class="project-description">
