--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ c<!doctype html>
           <h3>Hire Me</h3>
           <p>(405) 226-5532<br>
           <a href="mailto:jon.hocker@gmail.com">jon.hocker@gmail.com</a></p>
-          <a href="https://drive.google.com/file/d/1E8DHlfaGhvE2q7R9-fwMFq14Xl6cVixx/view?usp=sharing"><strong>my resume</strong></a>
+          <a href="https://drive.google.com/file/d/1E8DHlfaGhvE2q7R9-fwMFq14Xl6cVixx/view?usp=sharing" target="_blank"><strong>my resume</strong></a>
         </div>
           
         <div class=social>
