--- a/index.html
+++ b/index.html
@@ -1,20 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio Website</title>
-    <link rel="stylesheet" href="style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Jost:wght@100;200;300;400;500;600;700;800;900&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <script src="script.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Jon Hocker | Web Developer</title>
+  
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
+
+<!-- FontAwesome Icons -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"/>
+
+<!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Jost:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet"/>
+</head>
+
+    <!--TODO -- THINGS TO UPDATE
+        - new hero img 
+        - new favicon
+    -->
+
+<body>
+  <div class="container">
+    <!-- Section 1 -->
+    <section class="section-1">
+      <h1 class="section-1-heading">Web Developer</h1>
+      <img src="img/jon-headshot2.png" alt="Jon Hocker" class="person-img"/>
+      <h3 class="person-name">Jon Hocker</h3>
+      <a href="#" class="section-1-button">Projects</a>
+    </section>
+    <!-- End of Section 1 -->
+  </div>
+
+<!-- Navbar -->
+<nav class="navbar">
+  <ul>
+    <li>Home</li>
+    <li>About</li>
+    <li>Portfolio</li>
+    <li>Contact</li>
+  </ul>
+</nav>  
+<!-- End of Navbar -->
+
+  <script src="script.js"></script>
+</body>
 </html>
