--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
   <div class="container">
     <!-- Section 1 -->
-    <section class="section-1">
+    <section class="section-1 center">
       <h1 class="section-1-heading">Web Developer</h1>
       <img src="img/jon-headshot2.png" alt="Jon Hocker" class="person-img"/>
       <h3 class="person-name">Jon Hocker</h3>
@@ -34,14 +34,14 @@
   </div>
 
 <!-- Navbar -->
-<nav class="navbar">
-  <ul>
-    <li>Home</li>
-    <li>About</li>
-    <li>Portfolio</li>
-    <li>Contact</li>
-  </ul>
+<nav class="navbar center">
+  <a href="#" class="navbar-link">Home</a> 
+  <a href="#" class="navbar-link">About</a> 
+  <a href="#" class="navbar-link">Portfolio</a> 
+  <a href="#" class="navbar-link">Contact</a> 
 </nav>  
+
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <!-- End of Navbar -->
 
   <script src="script.js"></script>
