--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/style.css">
 
 <!-- FontAwesome Icons -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"/>
+<script src="https://kit.fontawesome.com/18723e8048.js" crossorigin="anonymous"></script>
 
 <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Jost:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet"/>
@@ -41,8 +41,29 @@
   <a href="#" class="navbar-link">Contact</a> 
 </nav>  
 
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <!-- End of Navbar -->
+
+<!-- Section 2 -->
+<section class="section-2">
+  <h1 class="section-2-heading center">About Me</h1>
+  <div class="about-me-wrapper">
+    <div class="about-description center">
+      <p>I’m an Enneagram 1 who loves to create clean, functional websites that are as easy to navigate as they are beautiful to look at. If I’m not coding I'm chasing around 7 kids with my lovely wife Amber.
+        <br>
+        Let’s build something great together!</p>
+    </div>
+    <div class="dev-icons center">
+      <ul class="icon-list center">
+        <li class="icon-list-item"><i class="fab fa-html5"></i></li>
+        <li class="icon-list-item"><i class="fab fa-css3-alt"></i></li>
+        <li class="icon-list-item"><i class="fab fa-js-square"></i></li>
+        <li class="icon-list-item"><i class="fab fa-github"></i></li>
+        <li><img src="img/photoshop-icon.png" alt="Photoshop Icon" class="icon-list-item"/></li>
+        <li><img src="img/code-sandbox-icon.png" alt="Code Sandbox Icon" class="icon-list-img"/></li>
+    </ul>    </div>
+  </div>  
+</section>
+<!-- End of Section 2 -->
 
   <script src="script.js"></script>
 </body>
