finished about me section

--- a/index.html
+++ b/index.html
@@ -45,23 +45,37 @@
 
 <!-- Section 2 -->
 <section class="section-2">
-  <h1 class="section-2-heading center">About Me</h1>
+  <h1 class="section-2-heading">About Me</h1>
   <div class="about-me-wrapper">
-    <div class="about-description center">
-      <p>I’m an Enneagram 1 who loves to create clean, functional websites that are as easy to navigate as they are beautiful to look at. If I’m not coding I'm chasing around 7 kids with my lovely wife Amber.
-        <br>
-        Let’s build something great together!</p>
+    <div class="about-description">
+      <p>Before I transitioned to a life of coding, my &lt;<em>non-tech</em>&gt; career path was built out of service to others through roles in customer service and HR. 
+        Now as a developer, I get to marry those people-oriented skills to create clean, functional websites that are beautiful to look and easy to navigate.</p> 
+      <p>I'm constantly expanding my expertise in how I design and build websites. I'm currently adding ReactJS and Bootstrap to my growing library of skills that includes:
+        HTML5, CSS3, JavaScript, JQuery, Rest APIs, Responsive Web Design, GIT/GitHub, VS Code, Adobe Photoshop, and CodeSandbox.</p>
     </div>
-    <div class="dev-icons center">
-      <ul class="icon-list center">
-        <li class="icon-list-item"><i class="fab fa-html5"></i></li>
-        <li class="icon-list-item"><i class="fab fa-css3-alt"></i></li>
-        <li class="icon-list-item"><i class="fab fa-js-square"></i></li>
-        <li class="icon-list-item"><i class="fab fa-github"></i></li>
-        <li><img src="img/photoshop-icon.png" alt="Photoshop Icon" class="icon-list-item"/></li>
-        <li><img src="img/code-sandbox-icon.png" alt="Code Sandbox Icon" class="icon-list-img"/></li>
-    </ul>    </div>
-  </div>  
+    <div class="about-description">
+      <p>I’m an Enneagram 1, so I can be a bit of a perfectionist &#128513;; but only because I’ve always looked for ways to improve what’s been in front of me - processes, communication, culture, and now, websites.</p>
+      <p>Outside of the coding life I enjoy playing the guitar and making music, building/tinkering with things, or a fun and possibly over-competitive board game with the family. 
+        Speaking of, I have the pleasure of chasing around seven awesome and rambunctious kiddos with my lovely and all too patient wife Amber.</p>
+      <!-- TODO use this somewhere else ------ <p>Let’s build something great together!</p> -->
+    </div>
+  </div>
+  <div class="dev-icons-wrapper">
+    <ul class="icon-list">
+      <li class="icon-list-item"><i class="fab fa-html5"></i></li>
+      <li class="icon-list-item"><i class="fab fa-css3-alt"></i></li>
+      <li class="icon-list-item"><i class="fab fa-js-square"></i></li>
+      <li class="icon-list-item"><i class="fab fa-github"></i></li>
+      <!-- <li><img src="img/" alt="React Icon" class="icon-list-item"/></li> -->
+      <!-- <li><img src="img/" alt="Bootstrap Icon" class="icon-list-item"/></li> -->
+      <!-- <li><img src="img/" alt="APIs Icon" class="icon-list-item"/></li> -->
+      <!-- <li><img src="img/" alt="jQuery Icon" class="icon-list-item"/></li> -->
+      <!-- <li><img src="img/" alt="Responsive Icon" class="icon-list-item"/></li> -->
+      <!-- <li><img src="img/" alt="VS Code Icon" class="icon-list-item"/></li> -->
+      <!-- <li><img src="img/photoshop-icon.png" alt="Photoshop Icon" class="icon-list-item"/></li> -->
+      <!-- <li><img src="img/code-sandbox-icon.png" alt="Code Sandbox Icon" class="icon-list-img"/></li> -->
+    </ul>
+  </div>
 </section>
 <!-- End of Section 2 -->
 
