finished footer and html/css

--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
           <p>Before I transitioned to a life of coding, my &lt;<em>non-tech</em>&gt; career path was built out of service to others through roles in customer service and HR. 
             Now as a developer, I get to marry those people-oriented skills to create clean, functional websites that are beautiful to look and easy to navigate.</p> 
           <p>I'm constantly expanding my expertise in how I design and build websites. I'm currently adding ReactJS and Bootstrap to my growing library of skills that includes:
-            HTML5, CSS3, JavaScript, JQuery, Rest APIs, Responsive Web Design, GIT/GitHub, VS Code, Adobe Photoshop, and CodeSandbox.</p>
+            HTML5, CSS3, JavaScript, JQuery, Rest APIs, Mobile and Responsive Web Design, GIT/GitHub, VS Code, Adobe Photoshop, and CodeSandbox.</p>
         </div>
 
         <div class="about-description">
           <p>I’m an Enneagram 1, so I can be a bit of a perfectionist &#128513;; but only because I’ve always looked for ways to improve what’s been in front of me - processes, communication, culture, and now, websites.</p>
           <p>Outside of the coding life I enjoy playing the guitar and making music, building/tinkering with things, or a fun and possibly over-competitive board game with the family. 
             Speaking of, I have the pleasure of chasing around seven awesome and rambunctious kiddos with my lovely and all too patient wife Amber.</p>
-          <!-- TODO use this line somewhere else ------ <p>Let’s build something great together!</p> -->
+          <p><span>Let’s build something great together!</span></p>
         </div>
       </div>
 
@@ -145,30 +145,27 @@
     <!-- Contact Section -->
     <section class="contact-section">
       <h1 class="section-heading">Contact Me</h1>
-      <form class="contact-form">
+      <form class="contact-form center">
         <input type="text" placeholder="Name">
         <input type="email" placeholder="Email">
-        <textarea placeholder="What do you want to create?">
-        <input type="button" value="Let's build something great together!" class"contact-button">
+        <textarea placeholder="What do you want to create?"></textarea>
+        <input type="submit" value="Submit" class="contact-button">
       </form>
     </section>
     <!-- End of Contact Section -->
 
     <!-- Footer -->
-    <footer>
-      <div class="footer-wrapper">
-        <div class="social-icons">
-        
-        </div>
-
-        <div class="copyright">
-        
-        </div>
+    <footer class="footer-wrapper center">
+      <div class="social-media center">
+        <a href="https://www.linkedin.com/in/jonhocker/" target="_blank" class="social-icon"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/jhock9" target="_blank" class="social-icon"><i class="fab fa-github-square"></i></a>
       </div>
+
+      <p class="copyright">Copyright: © 2021 Jon Hocker. All Rights Reserved.</p>
     </footer>
     <!-- End of Footer -->
-
   </div>
+
   <script src="script.js"></script>
 </body>
 </html>
