--- a/index.html
+++ b/index.html
@@ -24,30 +24,30 @@
 <body>
   <div class="container">
     <!-- Hero Section -->
-    <section class="hero-section center">
+    <section class="hero-section center" id="section-1">
       <h1 class="hero-heading">Web Developer</h1>
       <img src="img/jon-headshot2.png" alt="Jon Hocker" class="person-img"/>
       <h3 class="person-name">Jon Hocker</h3>
-      <a href="#" class="hero-button">Projects</a>
+      <a href="#section-3" class="hero-button">Projects</a>
     </section>
     <!-- End of Hero Section -->
 
     <!-- Navbar -->
     <nav class="navbar center">
-      <a href="#" class="navbar-link">Home</a> 
-      <a href="#" class="navbar-link">About</a> 
-      <a href="#" class="navbar-link">Portfolio</a> 
-      <a href="#" class="navbar-link">Contact</a> 
+      <a href="#section-1" class="navbar-link">Home</a> 
+      <a href="#section-2" class="navbar-link">About</a> 
+      <a href="#section-3" class="navbar-link">Portfolio</a> 
+      <a href="#section-4" class="navbar-link">Contact</a> 
     </nav>  
     <!-- End of Navbar -->
 
     <!-- About Me Section -->
-    <section class="about-section center">
+    <section class="about-section center" id="section-2">
       <h1 class="section-heading">About Me</h1>
       <div class="about-wrapper">
         <div class="about-description">
           <p>Before I transitioned to a life of coding, my &lt;<em>non-tech</em>&gt; career path was built out of service to others through roles in customer service and HR. 
-            Now as a developer, I get to marry those people-oriented skills to create clean, functional websites that are beautiful to look and easy to navigate.</p> 
+            Now as a developer, I get to marry those people-oriented skills to create clean, functional websites that are beautiful to look at and easy to navigate.</p> 
           <p>I'm constantly expanding my expertise in how I design and build websites. I'm currently adding ReactJS and Bootstrap to my growing library of skills that includes:
             HTML5, CSS3, JavaScript, JQuery, Rest APIs, Mobile and Responsive Web Design, GIT/GitHub, VS Code, Adobe Photoshop, and CodeSandbox.</p>
         </div>
@@ -82,7 +82,7 @@
     <!-- End of About Me Section -->
   
     <!-- Projects Section -->
-    <section class="projects-section center">
+    <section class="projects-section center" id="section-3">
       <h1 class="section-heading">My Projects</h1>
       <div class="projects-wrapper center">
         <div class="project">
@@ -143,7 +143,7 @@
     <!-- End of Projects Section -->
 
     <!-- Contact Section -->
-    <section class="contact-section">
+    <section class="contact-section" id="section-4">
       <h1 class="section-heading">Contact Me</h1>
       <form class="contact-form center">
         <input type="text" placeholder="Name">
@@ -166,6 +166,6 @@
     <!-- End of Footer -->
   </div>
 
-  <script src="script.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
